name:                voronoi
version:             0.2.0.0
synopsis:            A simple Fortune's Algorithm implementation
description:         Please see README.md
homepage:            https://github.com/SimplyNaOH/vornoi#readme
license:             GPL-3
license-file:        LICENSE
author:              SimplyNaOH
maintainer:          example@example.com
copyright:           2016 SimplyNaOH
category:            Algorithm
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fortune, Breakpoints
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers
  default-language:    Haskell2010

executable voronoi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -with-rtsopts=-sstderr
  build-depends:       base
                     , voronoi
                     , random
                     , colour
                     , diagrams == 1.3.0.*
                     , diagrams-lib
                     , diagrams-svg
  default-language:    Haskell2010

test-suite voronoi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , voronoi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SimplyNaOH/voronoi
